update display for the main section

--- a/memorygame/src/components/Main/style.css
+++ b/memorygame/src/components/Main/style.css
@@ -1,6 +1,6 @@
 .main {
     background-color: antiquewhite;
-    display: flex;
+    display: inline-block;
     min-height: 80%;
     flex-wrap: wrap;
     justify-content: center;
